--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,16 @@ a {
   font-size: 2rem;
   text-transform: uppercase; }
 
+p picture {
+  height: 100%;
+  width: 100%; }
+  p picture img {
+    width: 100%;
+    height: 100%; }
+
 img {
   width: 100%;
+  height: 100%;
   object-fit: cover; }
 
 body {
@@ -83,7 +91,9 @@ body > * {
 .gallery {
   padding: 2rem;
   display: grid;
-  grid-auto-columns: auto; }
+  grid-auto-columns: auto;
+  max-width: 1100px;
+  margin: 0 auto; }
 
 .gallery > * {
   margin-bottom: 1rem; }
@@ -117,8 +127,7 @@ body > * {
     padding: 0;
     position: absolute;
     top: 0;
-    left: 0;
-    background: red; }
+    left: 0; }
     .location .header__link .btn--location {
       flex-basis: 100%;
       order: 2; }
@@ -181,3 +190,104 @@ body > * {
     fill: #333; }
   .bg-accent .footer--title, .bg-accent .footer--text {
     color: #151515; }
+
+@media (max-width: 550px) {
+  body > * {
+    max-width: 500px;
+    margin: 0 auto; }
+  body footer {
+    max-width: 100%; } }
+
+@media (min-width: 550px) {
+  .header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 4rem auto 1rem auto 1rem auto 4rem; }
+    .header .header__image-box {
+      grid-row: 1 / -1;
+      grid-column: 1;
+      min-width: calc(100% + 60px); }
+      .header .header__image-box p {
+        height: 100%; }
+      .header .header__image-box img {
+        min-height: 100%; }
+    .header .header--title {
+      grid-row: 2;
+      grid-column: 2; }
+    .header .header--text {
+      grid-row: 4;
+      grid-column: 2; }
+    .header .header__link {
+      grid-row: 6;
+      grid-column: 2; }
+  .gallery {
+    display: grid;
+    grid-template-columns: auto auto minmax(250px, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 1rem; }
+    .gallery .gallery__img-box p {
+      height: 100%; }
+    .gallery .gallery__content--1 {
+      grid-row: 1;
+      grid-column: 1; }
+    .gallery .gallery__content--2 {
+      grid-column: -2;
+      grid-row: 3; }
+    .gallery .gallery__img-box--1 {
+      grid-column: 2 / -1;
+      grid-row: 1; }
+    .gallery .gallery__img-box--2 {
+      grid-column: 1 / 3;
+      grid-row: 2 / -1; }
+  .header__image-box--location {
+    height: 400px; }
+    .header__image-box--location p {
+      height: 100%; } }
+
+@media (min-width: 850px) {
+  .location .header__image-box--location {
+    height: 100vh; }
+  .address {
+    display: grid;
+    grid-template-columns: 3rem 1fr 1em 1fr 3rem;
+    grid-auto-rows: auto; }
+    .address .address--title {
+      grid-row: 2;
+      grid-column: 2;
+      font-size: 6rem;
+      display: flex;
+      flex-wrap: wrap;
+      width: calc(100% - 20px); }
+    .address .address--subtitle {
+      grid-column: 4;
+      grid-row: 2; }
+    .address .address--text {
+      grid-column: 4;
+      grid-row: 3; }
+    .address .address--content {
+      grid-column: 4;
+      grid-row: 4;
+      max-width: 480px;
+      line-height: 1.6; }
+  .footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .footer .footer--title {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 150px;
+      font-size: 3rem;
+      font-weight: 900;
+      line-height: 1.1; }
+    .footer .footer--text {
+      max-width: 320px;
+      font-size: 2.4rem;
+      line-height: 1.6;
+      font-weight: 400; } }
+
+@media (min-width: 852px) {
+  body {
+    background: red; }
+  .header {
+    background: green; } }
