--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@
   color: #ffffff;
   font-size: 2rem; }
 
+p picture {
+  height: 100%;
+  width: 100%; }
+  p picture img {
+    width: 100%;
+    height: 100%; }
+
 html {
   font-size: 62.5%; }
 
@@ -48,6 +55,9 @@ body {
 
 body > * {
   margin-bottom: 6rem; }
+
+.header__desktop-art {
+  display: none; }
 
 .header--title {
   font-size: 6rem;
@@ -245,6 +255,33 @@ body > * {
       height: 100%; } }
 
 @media (min-width: 967px) {
+  .header {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 10rem auto auto 10rem; }
+    .header .header__desktop-art {
+      display: block;
+      background: #151515;
+      height: 100%;
+      grid-row: 1 / -1;
+      grid-column: 1; }
+    .header .header__image-box {
+      grid-row: 1 / -1;
+      grid-column: 2; }
+    .header .header--title {
+      display: none; }
+    .header .header__link {
+      grid-row: 3;
+      grid-column: 3;
+      padding: 0;
+      margin: 0; }
+    .header .header--text {
+      grid-row: 2;
+      grid-column: 3;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
   .location .header__image-box--location {
     height: 100vh; }
   .address {
@@ -285,9 +322,3 @@ body > * {
       font-size: 2.4rem;
       line-height: 1.6;
       font-weight: 400; } }
-
-@media (min-width: 968px) {
-  body {
-    background: red; }
-  .header {
-    background: green; } }
