--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,9 +31,6 @@ $line-height--body: 3.2rem;
 }
 // 
 
-
-
-
 // ultility classes
 .text {
     font-size: $font-size__text;
@@ -55,7 +52,17 @@ $line-height--body: 3.2rem;
     font-size: 2rem;
 }
 
+p {
+    & picture {
+        height: 100%;
+        width: 100%;
 
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
 
 // 
 html {
@@ -93,6 +100,10 @@ body {
 
 body > * {
     margin-bottom: 6rem;
+}
+
+.header__desktop-art {
+    display: none;
 }
 
 .header--title {
@@ -389,6 +400,50 @@ body > * {
 
 @media (min-width: 967px)
 {
+    .header {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 10rem auto auto 10rem;
+
+        & .header__desktop-art {
+            display: block;
+            background: $color-dark;
+            height: 100%;
+            grid-row: 1 / -1;
+            grid-column: 1;
+        }
+
+        & .header__image-box {
+
+            grid-row: 1 / -1;
+            grid-column: 2;
+
+        }
+        & .header--title {
+            display: none;
+        }
+
+        & .header__link {
+            grid-row: 3;
+            grid-column: 3;
+            padding: 0;
+            margin: 0;
+        }
+
+        & .header--text {
+            grid-row: 2;
+            grid-column: 3;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        // .header {
+        //     display: grid;
+        //     grid-template-columns: 1fr 1fr;
+        //     grid-template-rows: 4rem auto 1rem auto 1rem auto 4rem;
+    }
     .location {
 
         & .header__image-box--location
@@ -450,16 +505,5 @@ body > * {
             line-height: 1.6;
             font-weight: $font-weight--2;
         }
-    }
-}
-
-@media (min-width: 968px)
-{
-    body {
-        background: red;
-    }
-
-    .header {
-        background: green;
     }
 }
